# pantropic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  models.json  pantropic.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: test_agent_scenarios.py  test_all_apis.py  test_anthropic_api.py  test_context_sizes.py  test_edge_cases.py  test_error_handling.py  test_request_queue.py
pantropic/: __init__.py  main.py
pantropic/api/: __init__.py  app.py
pantropic/api/routes/: chat.py  embeddings.py  health.py  messages.py  models.py  sessions.py
pantropic/api/schemas/: anthropic.py  requests.py  responses.py
pantropic/core/: config.py  container.py  exceptions.py  types.py
pantropic/hardware/: __init__.py  allocator.py  gpu.py  optimizer.py  system.py  vram.py
pantropic/inference/: __init__.py  engine.py  queue.py  sessions.py
pantropic/model_manager/: __init__.py  loader.py  registry.py  scanner.py
pantropic/observability/: logging.py
pantropic/tools/: __init__.py  extractor.py  injector.py
pantropic/utils/: tokenizer.py
tests/: conftest.py  test_comprehensive.py  test_integration.py  test_scanner.py
