[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pantropic"
version = "1.0.0"
description = "Intelligent Local LLM Server - Dynamic GGUF model management with hardware optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pantropic Team"}
]
keywords = ["gguf", "llama", "llm", "server", "llama-cpp", "local-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "llama-cpp-python>=0.3.16,<0.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
pantropic = "pantropic.main:run"
pantropic-scan = "scanner:main"

[project.urls]
Homepage = "https://github.com/pantropic/pantropic"
Repository = "https://github.com/pantropic/pantropic"
Issues = "https://github.com/pantropic/pantropic/issues"

[tool.setuptools]
packages = [
    "pantropic",
    "pantropic.api",
    "pantropic.api.routes",
    "pantropic.api.schemas",
    "pantropic.core",
    "pantropic.hardware",
    "pantropic.inference",
    "pantropic.model_manager",
    "pantropic.observability",
    "pantropic.tools",
    "pantropic.utils",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = [".", "pantropic"]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "D",     # pydocstyle
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "S",     # flake8-bandit
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PGH",   # pygrep-hooks
    "PL",    # Pylint
    "TRY",   # tryceratops
    "RUF",   # Ruff-specific rules
]

ignore = [
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D213",   # Multi-line docstring summary second line
    "ANN001", # Missing type annotation for function argument
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "ANN201", # Missing return type for public function
    "ANN202", # Missing return type for private function
    "ANN401", # Dynamically typed expressions (Any) are disallowed
    "ARG001", # Unused function argument (needed for handlers)
    "ARG002", # Unused method argument (needed for handlers)
    "S104",   # Possible binding to all interfaces
    "S106",   # Possible hardcoded password
    "S110",   # try-except-pass
    "S301",   # Pickle usage
    "S603",   # subprocess call
    "S607",   # subprocess partial path
    "S608",   # Possible SQL injection
    "PLC0415", # `import` should be at the top-level (needed for lazy imports)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value
    "PLW0603", # Using global statement is discouraged
    "TRY003", # Avoid specifying long messages outside exception class
    "TRY300", # Consider moving statement to else block
    "TRY301", # Abstract raise to inner function
    "TRY401", # Redundant exception in logging
    "EM101",  # Exception must not use a string literal
    "EM102",  # Exception must not use an f-string literal
    "B008",   # Do not perform function calls in argument defaults (needed for Depends)
    "B904",   # Within except, raise with from err
    "DTZ003", # datetime.utcnow() used
    "DTZ005", # datetime.now() without tz
    "PTH123", # open() should be Path.open()
    "RUF006", # Store reference to asyncio.create_task
    "RUF012", # Mutable class attributes should use ClassVar
    "E501",   # Line too long (handled by formatter)
    "W293",   # Blank line contains whitespace
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103", "ANN201", "ANN001", "PLR2004"]
"pantropic/model_manager/scanner.py" = ["ALL"]  # Scanner has its own linting

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_subclassing_any = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "llama_cpp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pantropic.model_manager.scanner"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pantropic",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["pantropic"]
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
    "pantropic/model_manager/scanner.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
]
